css/style.css
/*
    Paleta de cores

    #351715
    #633f41
    #b5b4b9
    #263d1f
    #16170f

*/

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 1.1rem;
    color: #16170f;
}

/*--------------------NavBar--------------------*/
header {
    position: sticky;
    top: 0px;
    background: #16170f;
}

nav.nav-bar ul{
    list-style-type: none;
    overflow: hidden;
}

nav.nav-bar ul li{
    float: left;
}

nav.nav-bar ul li a{
    display: block;
    text-decoration: none;
    color: white;
    padding: 15px;
}

nav.nav-bar ul li a:hover:not(.logo) {
    background-color: #000000;
}

nav.nav-bar ul li.right {
    float: right;
}

/*--------------------Content main--------------------*/
section.content-main {
    position: relative;
    height: 70vh;
    width: 100%;
    background-image: url("../images/coffee3.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    overflow-x: hidden;
    /* opacity: 0.9; */
}

.middle{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
}

.left-bottom {
    background-color: #16170f;
    color: white;
    display: block;
    width: 330px;
    position: absolute;
    bottom: 10px;
    left: 25px;
}

.rigth-bottom {
    color: white;
    position: absolute;
    bottom: 10px;
    right: 25px;
}

.logo-main {
    text-transform: uppercase;
    text-align: left;
    font-size: 3rem;
    color: #16170f;
}


/*Sobre*/
.margin{
    margin: auto;
    width: 60%;
    background-color: rgb(248, 248, 248);
}

.text-about-container {
    padding: 80px 40px;
    text-align: left;
}

.sub-tittle {
    background-color: #16170f;
    color: white;
    text-align: center;
    font-weight: 100;
    font-size: 1.5rem;
    width: 30%;
    margin: 0px auto 80px auto;
    border-radius: 2px;
    text-transform: uppercase;
}

.text-about {
    margin-bottom: 20px;
}

article article.quote {
    padding: 25px;
    background-color: rgb(240, 240, 240);
    border-left: 6px solid rgb(206, 204, 204);
}

article article.quote .margin-bottom {
    margin-bottom: 25px;
}

.sams-cafe {
    margin: auto;
    width: 90%;
}

.sams-cafe-img {
    max-width: 100%;
    opacity: 0.9;
}

.adress-time p{
    margin-top: 30px; 
}

.adress-time:last-child {
    padding-bottom: 60px;
}

/*Entre Sobre e menu*/
section.banner {
    /* margin: 60px 0px; */
    height: 40vh;
    width: 100%;
    position: relative;
    background-image: url("../images/teste2.jpg");
    background-position: center;
    background-size: cover;
    border-top: 40px solid rgb(207, 207, 207);
    border-bottom: 40px solid rgb(207, 207, 207);
    opacity: 0.9;
}

/*MENU----------------------------------*/

.format {
    height: 30vh;
    width: 100%;
    background-color: rgb(207, 207, 207);
    margin-bottom: 30px;
}

.menu {
    display: inline-block;
    width: 70%;
    height: 100%;
    padding: 15px;
    padding-right: 0;
}

.menu-inv {
    float: right;
    width: 70%;
    height: 100%;
    padding: 15px;
    padding-right: 0;
}

.products-img-inv {
    display: inline-block;
    width: 30%;
    height: 100%;
    position: relative;/*Pra usar a classe middle*/
    overflow: hidden;
    background-color: rgb(248, 248, 248);
}

.products-img {
    width: 30%;
    float: right;
    height: 100%;
    position: relative;/*Pra usar a classe middle*/
    overflow: hidden;
    background-color: rgb(248, 248, 248);
}

.products-img img, .products-img-inv img{
    width: 200px;
    border-radius: 5px;
}

.menu-tittle {
    display: inline-block;
    font-size: 1.1rem;
    margin-bottom: 5px;
    width: 80%;
}

.text-menu {
    margin-bottom: 15px;
    font-size: 0.9rem;
}

.preco {
    color: white;
    background-color: #16170f;
    padding: 8px;
}

